--- a/05-Object Oriented Programming/04-OOP Challenge.ipynb
+++ b/05-Object Oriented Programming/04-OOP Challenge.ipynb
@@ -34,14 +34,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Account owner:   Jose\n",
+      "Account balance: $100\n",
+      "Jose\n",
+      "100\n",
+      "Deposit Accepted\n",
+      "None\n",
+      "Transaction rejects. Can't deposit negative amount!\n",
+      "None\n",
+      "Withdrawal Accepted\n",
+      "None\n",
+      "Transaction rejected. Can't withdraw negative amount!\n",
+      "None\n",
+      "Funds Unavailable!\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "class Account:\n",
-    "    pass"
+    "    owner   = \"\"\n",
+    "    balance = 0\n",
+    "    def __init__(self,owner,balance):\n",
+    "        self.owner   = owner\n",
+    "        self.balance = balance\n",
+    "    \n",
+    "    def deposit(self, amount):\n",
+    "        if amount<0:\n",
+    "            print(\"Transaction rejects. Can't deposit negative amount!\")\n",
+    "        else:\n",
+    "            self.balance += amount        \n",
+    "            print(\"Deposit Accepted\")\n",
+    "    \n",
+    "    def withdraw(self, amount):\n",
+    "        if amount<0:\n",
+    "            print(\"Transaction rejected. Can't withdraw negative amount!\")\n",
+    "        elif self.balance < amount:\n",
+    "            print(\"Funds Unavailable!\")\n",
+    "        else:\n",
+    "            self.balance -= amount\n",
+    "            print(\"Withdrawal Accepted\")\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        ms  = \"Account owner:   \" + self.owner + \"\\n\"\n",
+    "        ms += \"Account balance: $\" + str(self.balance)\n",
+    "        return ms\n",
+    "    \n",
+    "# test\n",
+    "# 1. Instantiate the class\n",
+    "acct1 = Account('Jose',100)\n",
+    "\n",
+    "# 2. Print the object\n",
+    "print(acct1)\n",
+    "\n",
+    "# 3. Show the account owner attribute\n",
+    "print(acct1.owner)\n",
+    "\n",
+    "# 4. Show the account balance attribute\n",
+    "print(acct1.balance)\n",
+    "\n",
+    "# 5. Make a series of deposits and withdrawals\n",
+    "print( acct1.deposit( 50 ) )\n",
+    "print( acct1.deposit( -50 ) )\n",
+    "\n",
+    "print( acct1.withdraw( 75 ) )\n",
+    "print( acct1.withdraw( -75 ) )\n",
+    "\n",
+    "# 6. Make a withdrawal that exceeds the available balance\n",
+    "print(acct1.withdraw(500))\n",
+    "      "
    ]
   },
   {
@@ -180,7 +248,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -194,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
