--- a/11-Python Generators/02-Iterators and Generators Homework.ipynb
+++ b/11-Python Generators/02-Iterators and Generators Homework.ipynb
@@ -24,15 +24,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "4\n",
+      "9\n",
+      "16\n",
+      "25\n",
+      "36\n",
+      "49\n",
+      "64\n",
+      "81\n"
+     ]
+    }
+   ],
    "source": [
     "def gensquares(N):\n",
-    "\n",
-    "    pass"
+    "    for i in range(N):\n",
+    "        yield i*i\n",
+    "#test\n",
+    "for x in gensquares(10):\n",
+    "    print(x)"
    ]
   },
   {
@@ -95,15 +113,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "5\n",
+      "7\n",
+      "1\n",
+      "2\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "6\n",
+      "5\n",
+      "2\n",
+      "7\n"
+     ]
+    }
+   ],
    "source": [
+    "import random\n",
     "def rand_num(low,high,n):\n",
-    "\n",
-    "    pass"
+    "    for i in range(n):\n",
+    "        yield random.randint(low,high)\n",
+    "# test\n",
+    "for num in rand_num(1,10,12):\n",
+    "    print(num)"
    ]
   },
   {
@@ -146,15 +185,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h\n",
+      "e\n",
+      "l\n",
+      "l\n",
+      "o\n"
+     ]
+    }
+   ],
    "source": [
     "s = 'hello'\n",
     "\n",
-    "#code here"
+    "#code here\n",
+    "s_iter = iter(s)\n",
+    "nv = ''\n",
+    "while True:\n",
+    "    nv = next(s_iter,'!!end!!')\n",
+    "    if nv == '!!end!!':\n",
+    "        break\n",
+    "    print(nv)"
    ]
   },
   {
@@ -163,7 +219,8 @@
    "source": [
     "### Problem 4\n",
     "Explain a use case for a generator using a yield statement where you would not want to use a normal function with a return statement.<br><br><br><br><br><br>\n",
-    "\n"
+    "\n",
+    "Where you want a long list of numbers or value, and don't want to store them ahead of time."
    ]
   },
   {
@@ -201,15 +258,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "item for item in my_list if item > 3\n",
+    "that uses \"list comprehension with a filter to...\n",
+    "1. take your existing list [1,2,3,4,5]\n",
+    "2. walk through it generting a new list, \n",
+    "3. testing each element from the original list vs. the test (item>3)\n",
+    "4. only 4 and 5 pass that test\n",
+    "5. so a new list is create [4,5]\n",
+    "\n",
+    "\n",
     "Hint: Google *generator comprehension*!\n",
     "\n",
     "# Great Job!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -223,7 +296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
