--- a/12-Advanced Python Modules/01-Opening-and-Reading-Files-Folders.ipynb
+++ b/12-Advanced Python Modules/01-Opening-and-Reading-Files-Folders.ipynb
@@ -612,7 +612,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -626,7 +626,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
